# CHN-Chess

./: .gitignore  AIChessBoard.qml  AboutPage.qml  Actions.qml  AnimationEffect.qml  CMakeLists.txt  CMakeLists.txt.user.fbd5841  ChessBoard.qml  ChessPiece.qml  Content.qml  Dialogs.qml  EleeyeEngine.cpp  EleeyeEngine.h  HomePage.qml  Main.qml  MusicPlayer.qml  NetworkChessBoard.qml  Player.qml  PveGamePage.qml  PvpGamePage.qml  RulesPage.qml  Window.qml  aigameboard.cpp  aigameboard.h  backgroundmusic.qrc  board.cpp  board.h  chess.qrc  initial.js  main.cpp  moverecord.cpp  moverecord.h  music.qrc  networkboard.cpp  networkboard.h  readme.txt  settings.js  stone.cpp  stone.h  wget-log
engines/: eleeye
